fix overflow

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body{
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    overflow-x: hidden;
 }
 body::-webkit-scrollbar-track {
 	
